feat: Implementar animaciones de fade-in al hacer scroll

--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvin Cesar Sanchez Ochoa Alvarez | Desarrollador de Backend</title>
-    <meta name="description" content="Portafolio profesional de [Alvin Cesar Sanchez Ochoa Alvarez], desarrollador de software especializado en backend con .NET, Node.js, SQL y MongoDB.">
-    
+    <title>Alvin Sanchez | Desarrollador de Backend</title>
+    <meta name="description" content="Portafolio profesional de Alvin Sanchez, desarrollador de software especializado en backend con .NET, Node.js, SQL y MongoDB.">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header class="header">
         <nav class="nav container">
-            <a href="#inicio" class="nav__logo">Alvin Cesar Sanchez Ochoa Alvarez</a>
+            <a href="#inicio" class="nav__logo">Alvin Sanchez</a>
             <ul class="nav__menu">
                 <li class="nav__item"><a href="#proyectos" class="nav__link">Proyectos</a></li>
                 <li class="nav__item"><a href="#tecnologias" class="nav__link">Tecnologías</a></li>
@@ -29,15 +31,15 @@
     <main>
         <section class="hero section" id="inicio">
             <div class="hero__container container">
-                <h1 class="hero__title">Hola, soy Alvin Cesar Sanchez Ochoa Alvarez</h1>
+                <h1 class="hero__title">Hola, soy Alvin Sanchez</h1>
                 <h2 class="hero__subtitle" id="typewriter">Desarrollador de Backend</h2>
                 <p class="hero__description">
                     Construyo la lógica y la infraestructura robusta que hace que las aplicaciones funcionen. Especializado en crear APIs eficientes y seguras con Node.js y .NET.
                 </p>
                 <div class="hero__cta">
-                    <a href="assets/cv/Tu_Nombre_CV.pdf" download class="button">Descargar CV</a>
+                    <a href="assets/cv/Alvin_Sanchez_CV.pdf" download class="button">Descargar CV</a>
                     <div class="hero__socials">
-                        <a href="https://github.com/tu-usuario" target="_blank" class="social__link">GitHub</a>
+                        <a href="https://github.com/AlvinSanchezO" target="_blank" class="social__link">GitHub</a>
                         <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="social__link">LinkedIn</a>
                     </div>
                 </div>
@@ -63,7 +65,7 @@
                             <li class="tech-item">JWT</li>
                         </ul>
                         <div class="card__links">
-                            <a href="https://github.com/tu-usuario/tu-repo-proyecto-1" target="_blank" class="card__link">Ver en GitHub</a>
+                            <a href="https://github.com/AlvinSanchezO/tu-repo-proyecto-1" target="_blank" class="card__link">Ver en GitHub</a>
                             <a href="#" target="_blank" class="card__link">Ver Documentación (Swagger)</a>
                         </div>
                     </div>
@@ -85,7 +87,7 @@
                             <li class="tech-item">Mongoose</li>
                         </ul>
                         <div class="card__links">
-                            <a href="https://github.com/tu-usuario/tu-repo-proyecto-2" target="_blank" class="card__link">Ver en GitHub</a>
+                            <a href="https://github.com/AlvinSanchezO/tu-repo-proyecto-2" target="_blank" class="card__link">Ver en GitHub</a>
                         </div>
                     </div>
                 </article>
@@ -95,7 +97,20 @@
         <section class="tech section" id="tecnologias">
             <h2 class="section__title">Mi Stack Tecnológico</h2>
             <div class="tech__container container">
-                <p>C#, .NET, Node.js, Express, SQL, MongoDB, Git, GitHub, Jira, HTML5, CSS3, JavaScript</p>
+                <div class="tech__grid">
+                    <div class="tech__item"><i class="devicon-csharp-plain"></i><span>C#</span></div>
+                    <div class="tech__item"><i class="devicon-dotnetcore-plain"></i><span>.NET</span></div>
+                    <div class="tech__item"><i class="devicon-nodejs-plain-wordmark"></i><span>Node.js</span></div>
+                    <div class="tech__item"><i class="devicon-express-original"></i><span>Express</span></div>
+                    <div class="tech__item"><i class="devicon-mongodb-plain-wordmark"></i><span>MongoDB</span></div>
+                    <div class="tech__item"><i class="devicon-microsoftsqlserver-plain"></i><span>SQL Server</span></div>
+                    <div class="tech__item"><i class="devicon-git-plain"></i><span>Git</span></div>
+                    <div class="tech__item"><i class="devicon-github-original"></i><span>GitHub</span></div>
+                    <div class="tech__item"><i class="devicon-jira-plain"></i><span>Jira</span></div>
+                    <div class="tech__item"><i class="devicon-html5-plain"></i><span>HTML5</span></div>
+                    <div class="tech__item"><i class="devicon-css3-plain"></i><span>CSS3</span></div>
+                    <div class="tech__item"><i class="devicon-javascript-plain"></i><span>JavaScript</span></div>
+                </div>
             </div>
         </section>
 
@@ -119,9 +134,9 @@
 
     <footer class="footer">
         <div class="footer__container container">
-            <p>&copy; 2025 [Tu Nombre]. Diseñado y construido por mí.</p>
+            <p>&copy; 2025 Alvin Cesar Sanchez Ochoa Alvarez. Diseñado y construido por mí.</p>
             <div class="footer__socials">
-                <a href="https://github.com/tu-usuario" target="_blank" class="social__link">GitHub</a>
+                <a href="https://github.com/AlvinSanchezO" target="_blank" class="social__link">GitHub</a>
                 <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="social__link">LinkedIn</a>
             </div>
         </div>
