--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alvin Sanchez | Desarrollador de Backend</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    
     <meta name="description" content="Portafolio profesional de Alvin Sanchez, desarrollador de software especializado en backend con .NET, Node.js, SQL y MongoDB.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +26,7 @@
         <nav class="nav container">
             <a href="#inicio" class="nav__logo">Alvin Sanchez</a>
             <ul class="nav__menu">
+                <li class="nav__item"><a href="#sobre-mi" class="nav__link">Sobre Mí</a></li>
                 <li class="nav__item"><a href="#proyectos" class="nav__link">Proyectos</a></li>
                 <li class="nav__item"><a href="#tecnologias" class="nav__link">Tecnologías</a></li>
                 <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
@@ -46,10 +53,30 @@
             </div>
         </section>
 
+        <section class="about section" id="sobre-mi">
+            <h2 class="section__title">Sobre Mí</h2>
+            <div class="about__container container fade-in">
+                <div class="about__image-container">
+                    <img src="assets/images/alvin-sanchez-profile.jpg" alt="Foto de perfil de Alvin Sanchez" class="about__image">
+                </div>
+                <div class="about__data">
+                    <p class="about__description">
+                        ¡Hola! Soy Alvin, un apasionado desarrollador de software con un fuerte enfoque en el backend. Me fascina construir la lógica y la infraestructura que hacen que las aplicaciones sean robustas, escalables y seguras.
+                    </p>
+                    <p class="about__description">
+                        Mi viaje en la programación comenzó con la curiosidad de entender cómo funcionaban las cosas "detrás de escena". Hoy, esa curiosidad me impulsa a aprender continuamente y a buscar soluciones eficientes a problemas complejos, ya sea diseñando una API RESTful con .NET o estructurando datos en MongoDB.
+                    </p>
+                    <p class="about__description">
+                        Cuando no estoy escribiendo código, disfruto explorando nuevas rutas de senderismo y leyendo sobre ciencia ficción.
+                    </p>
+                </div>
+            </div>
+        </section>
+
         <section class="projects section" id="proyectos">
             <h2 class="section__title">Proyectos Destacados</h2>
             <div class="projects__container container">
-                <article class="card">
+                <article class="card fade-in">
                     <div class="card__content">
                         <h3 class="card__title">API de Gestión de Pedidos</h3>
                         <p class="card__description">
@@ -71,7 +98,7 @@
                     </div>
                 </article>
 
-                <article class="card">
+                <article class="card fade-in">
                     <div class="card__content">
                         <h3 class="card__title">API para Blog de Contenido</h3>
                         <p class="card__description">
@@ -98,18 +125,18 @@
             <h2 class="section__title">Mi Stack Tecnológico</h2>
             <div class="tech__container container">
                 <div class="tech__grid">
-                    <div class="tech__item"><i class="devicon-csharp-plain"></i><span>C#</span></div>
-                    <div class="tech__item"><i class="devicon-dotnetcore-plain"></i><span>.NET</span></div>
-                    <div class="tech__item"><i class="devicon-nodejs-plain-wordmark"></i><span>Node.js</span></div>
-                    <div class="tech__item"><i class="devicon-express-original"></i><span>Express</span></div>
-                    <div class="tech__item"><i class="devicon-mongodb-plain-wordmark"></i><span>MongoDB</span></div>
-                    <div class="tech__item"><i class="devicon-microsoftsqlserver-plain"></i><span>SQL Server</span></div>
-                    <div class="tech__item"><i class="devicon-git-plain"></i><span>Git</span></div>
-                    <div class="tech__item"><i class="devicon-github-original"></i><span>GitHub</span></div>
-                    <div class="tech__item"><i class="devicon-jira-plain"></i><span>Jira</span></div>
-                    <div class="tech__item"><i class="devicon-html5-plain"></i><span>HTML5</span></div>
-                    <div class="tech__item"><i class="devicon-css3-plain"></i><span>CSS3</span></div>
-                    <div class="tech__item"><i class="devicon-javascript-plain"></i><span>JavaScript</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-csharp-plain"></i><span>C#</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-dotnetcore-plain"></i><span>.NET</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-nodejs-plain-wordmark"></i><span>Node.js</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-express-original"></i><span>Express</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-mongodb-plain-wordmark"></i><span>MongoDB</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-microsoftsqlserver-plain"></i><span>SQL Server</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-git-plain"></i><span>Git</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-github-original"></i><span>GitHub</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-jira-plain"></i><span>Jira</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-html5-plain"></i><span>HTML5</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-css3-plain"></i><span>CSS3</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-javascript-plain"></i><span>JavaScript</span></div>
                 </div>
             </div>
         </section>
