--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvin Sanchez | Desarrollador de Backend</title>
+    <title>Alvin Sanchez | Backend Developer</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
     
-    <meta name="description" content="Portafolio profesional de Alvin Sanchez, desarrollador de software especializado en backend con .NET, Node.js, SQL y MongoDB.">
+    <meta name="description" content="Professional portfolio of Alvin Sanchez, a backend software developer specializing in .NET, Node.js, SQL, and MongoDB.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,15 +24,15 @@
 
     <header class="header">
         <nav class="nav container">
-            <a href="#inicio" class="nav__logo">Alvin Sanchez</a>
+            <a href="#home" class="nav__logo">Alvin Sanchez</a>
             <ul class="nav__menu">
-                <li class="nav__item"><a href="#sobre-mi" class="nav__link">Sobre Mí</a></li>
-                <li class="nav__item"><a href="#proyectos" class="nav__link">Proyectos</a></li>
-                <li class="nav__item"><a href="#tecnologias" class="nav__link">Tecnologías</a></li>
-                <li class="nav__item"><a href="#contacto" class="nav__link">Contacto</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
+                <li class="nav__item"><a href="#technologies" class="nav__link">Technologies</a></li>
+                <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                 <li class="nav__item">
                     <div class="theme-switcher">
-                        <button class="theme-button" id="theme-button" aria-label="Cambiar tema">
+                        <button class="theme-button" id="theme-button" aria-label="Change theme">
                             <svg id="theme-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line></svg>
                         </button>
                     </div>
@@ -42,15 +42,15 @@
     </header>
 
     <main>
-        <section class="hero section" id="inicio">
+        <section class="hero section" id="home">
             <div class="hero__container container">
-                <h1 class="hero__title">Hola, soy Alvin Sanchez</h1>
-                <h2 class="hero__subtitle" id="typewriter">Desarrollador de Backend</h2>
+                <h1 class="hero__title">Hi, I'm Alvin Sanchez</h1>
+                <h2 class="hero__subtitle" id="typewriter">Backend Developer</h2>
                 <p class="hero__description">
-                    Construyo la lógica y la infraestructura robusta que hace que las aplicaciones funcionen. Especializado en crear APIs eficientes y seguras con Node.js y .NET.
+                    I build the robust logic and infrastructure that make applications work. Specializing in creating efficient and secure APIs with Node.js and .NET.
                 </p>
                 <div class="hero__cta">
-                    <a href="assets/cv/Alvin_Sanchez_CV.pdf" download class="button">Descargar CV</a>
+                    <a href="assets/cv/Alvin_Sanchez_CV.pdf" download class="button">Download CV</a>
                     <div class="hero__socials">
                         <a href="https://github.com/AlvinSanchezO" target="_blank" class="social__link">GitHub</a>
                         <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="social__link">LinkedIn</a>
@@ -59,37 +59,37 @@
             </div>
         </section>
 
-        <section class="about section" id="sobre-mi">
-            <h2 class="section__title">Sobre Mí</h2>
+        <section class="about section" id="about">
+            <h2 class="section__title">About Me</h2>
             <div class="about__container container fade-in">
                 <div class="about__image-container">
-                    <img src="assets/images/alvin-sanchez-profile.jpg" alt="Foto de perfil de Alvin Sanchez" class="about__image">
+                    <img src="assets/images/alvin-sanchez-profile.jpg" alt="Profile picture of Alvin Sanchez" class="about__image">
                 </div>
                 <div class="about__data">
                     <p class="about__description">
-                        ¡Hola! Soy Alvin, un apasionado desarrollador de software con un fuerte enfoque en el backend. Me fascina construir la lógica y la infraestructura que hacen que las aplicaciones sean robustas, escalables y seguras.
+                        Hello! I'm Alvin, a passionate software developer with a strong focus on the backend. I'm fascinated by building the logic and infrastructure that make applications robust, scalable, and secure.
                     </p>
                     <p class="about__description">
-                        Mi viaje en la programación comenzó con la curiosidad de entender cómo funcionaban las cosas "detrás de escena". Hoy, esa curiosidad me impulsa a aprender continuamente y a buscar soluciones eficientes a problemas complejos, ya sea diseñando una API RESTful con .NET o estructurando datos en MongoDB.
+                        My journey into programming began with a curiosity to understand how things worked "behind the scenes." Today, that curiosity drives me to continuously learn and seek efficient solutions to complex problems, whether it's designing a RESTful API with .NET or structuring data in MongoDB.
                     </p>
                     <p class="about__description">
-                        Cuando no estoy escribiendo código, disfruto explorando nuevas rutas de senderismo y leyendo sobre ciencia ficción.
+                        When I'm not writing code, I enjoy exploring new hiking trails and reading science fiction.
                     </p>
                 </div>
             </div>
         </section>
 
-        <section class="projects section" id="proyectos">
-            <h2 class="section__title">Proyectos Destacados</h2>
+        <section class="projects section" id="projects">
+            <h2 class="section__title">Featured Projects</h2>
             <div class="projects__container container">
                 <article class="card fade-in">
                     <div class="card__content">
-                        <h3 class="card__title">API de Gestión de Pedidos</h3>
+                        <h3 class="card__title">Order Management API</h3>
                         <p class="card__description">
-                            Una API RESTful construida con C# y .NET para manejar la lógica de un e-commerce, asegurando la integridad de datos con SQL Server.
+                            A RESTful API built with C# and .NET to handle e-commerce logic, ensuring data integrity with SQL Server.
                         </p>
                         <p class="card__challenge">
-                            <strong>Reto Técnico:</strong> Implementar transacciones ACID para garantizar que la creación de un pedido y la actualización del inventario fueran una operación atómica.
+                            <strong>Technical Challenge:</strong> Implementing ACID transactions to ensure that order creation and inventory updates were an atomic operation.
                         </p>
                         <ul class="card__tech-list">
                             <li class="tech-item">C#</li>
@@ -98,20 +98,20 @@
                             <li class="tech-item">JWT</li>
                         </ul>
                         <div class="card__links">
-                            <a href="https://github.com/AlvinSanchezO/tu-repo-proyecto-1" target="_blank" class="card__link">Ver en GitHub</a>
-                            <a href="#" target="_blank" class="card__link">Ver Documentación (Swagger)</a>
+                            <a href="https://github.com/AlvinSanchezO/tu-repo-proyecto-1" target="_blank" class="card__link">View on GitHub</a>
+                            <a href="#" target="_blank" class="card__link">View Docs (Swagger)</a>
                         </div>
                     </div>
                 </article>
 
                 <article class="card fade-in">
                     <div class="card__content">
-                        <h3 class="card__title">API para Blog de Contenido</h3>
+                        <h3 class="card__title">Content Blog API</h3>
                         <p class="card__description">
-                           API para un CMS de blogs usando Node.js, Express y MongoDB, optimizada para flexibilidad y escalabilidad de contenido.
+                           An API for a blog CMS using Node.js, Express, and MongoDB, optimized for content flexibility and scalability.
                         </p>
                          <p class="card__challenge">
-                            <strong>Reto Técnico:</strong> Diseñar un esquema en Mongoose que permitiera poblar eficientemente comentarios anidados y datos del autor sin sacrificar el rendimiento.
+                            <strong>Technical Challenge:</strong> Designing a Mongoose schema that efficiently populated nested comments and author data without sacrificing performance.
                         </p>
                         <ul class="card__tech-list">
                             <li class="tech-item">Node.js</li>
@@ -120,15 +120,15 @@
                             <li class="tech-item">Mongoose</li>
                         </ul>
                         <div class="card__links">
-                            <a href="https://github.com/AlvinSanchezO/tu-repo-proyecto-2" target="_blank" class="card__link">Ver en GitHub</a>
+                            <a href="https://github.com/AlvinSanchezO/tu-repo-proyecto-2" target="_blank" class="card__link">View on GitHub</a>
                         </div>
                     </div>
                 </article>
             </div>
         </section>
         
-        <section class="tech section" id="tecnologias">
-            <h2 class="section__title">Mi Stack Tecnológico</h2>
+        <section class="tech section" id="technologies">
+            <h2 class="section__title">My Tech Stack</h2>
             <div class="tech__container container">
                 <div class="tech__grid">
                     <div class="tech__item fade-in"><i class="devicon-csharp-plain"></i><span>C#</span></div>
@@ -147,26 +147,26 @@
             </div>
         </section>
 
-        <section class="contact section" id="contacto">
+        <section class="contact section" id="contact">
             <div class="contact__container container">
-                <h2 class="section__title">Hablemos</h2>
+                <h2 class="section__title">Let's Talk</h2>
                 <p class="contact__description">
-                    Estoy buscando activamente mi primera oportunidad como desarrollador. Si mi perfil te parece interesante, no dudes en contactarme.
+                    I'm actively looking for my first opportunity as a developer. If my profile interests you, feel free to reach out.
                 </p>
 
                 <div class="contact__options">
                     <div class="contact__option fade-in">
                         <svg class="contact__option-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                         <div class="contact__option-content">
-                            <h3 class="contact__option-title">Correo Electrónico</h3>
-                            <a href="mailto:tu.email@profesional.com" class="contact__option-link">tu.email@profesional.com</a>
+                            <h3 class="contact__option-title">Email</h3>
+                            <a href="mailto:your.professional.email@com" class="contact__option-link">your.professional.email@com</a>
                         </div>
                     </div>
                     <div class="contact__option fade-in">
                         <svg class="contact__option-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
                         <div class="contact__option-content">
                             <h3 class="contact__option-title">LinkedIn</h3>
-                            <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="contact__option-link">Envíame un mensaje</a>
+                            <a href="https://linkedin.com/in/your-username" target="_blank" class="contact__option-link">Send me a message</a>
                         </div>
                     </div>
                 </div>
@@ -176,10 +176,10 @@
 
     <footer class="footer">
         <div class="footer__container container">
-            <p>&copy; 2025 Alvin Cesar Sanchez Ochoa Alvarez. Diseñado y construido por mí.</p>
+            <p>&copy; 2025 Alvin Cesar Sanchez Ochoa Alvarez. Designed and built by me.</p>
             <div class="footer__socials">
                 <a href="https://github.com/AlvinSanchezO" target="_blank" class="social__link">GitHub</a>
-                <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="social__link">LinkedIn</a>
+                <a href="https://linkedin.com/in/your-username" target="_blank" class="social__link">LinkedIn</a>
             </div>
         </div>
     </footer>
