fix: Update project card 2 with Tienda Virtual links

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </section>
 
-        <section class="projects section" id="projects">
+        <section classs="projects section" id="projects">
             <h2 class="section__title">Featured Projects</h2>
             <div class="projects__container container">
                 <article class="card fade-in">
@@ -106,21 +106,21 @@
 
                 <article class="card fade-in">
                     <div class="card__content">
-                        <h3 class="card__title">Content Blog API</h3>
+                        <h3 class="card__title">Tienda Virtual</h3>
                         <p class="card__description">
-                           An API for a blog CMS using Node.js, Express, and MongoDB, optimized for content flexibility and scalability.
+                           A responsive e-commerce storefront built with HTML, CSS, and JavaScript. Features a product catalog, shopping cart functionality, and a clean user interface.
                         </p>
                          <p class="card__challenge">
-                            <strong>Technical Challenge:</strong> Designing a Mongoose schema that efficiently populated nested comments and author data without sacrificing performance.
+                            <strong>Technical Challenge:</strong> Implementing a functional shopping cart using `localStorage` to persist data between user sessions.
                         </p>
                         <ul class="card__tech-list">
-                            <li class="tech-item">Node.js</li>
-                            <li class="tech-item">Express</li>
-                            <li class="tech-item">MongoDB</li>
-                            <li class="tech-item">Mongoose</li>
+                            <li class="tech-item">HTML</li>
+                            <li class="tech-item">CSS</li>
+                            <li class="tech-item">JavaScript</li>
                         </ul>
                         <div class="card__links">
-                            <a href="https://github.com/AlvinSanchezO/tu-repo-proyecto-2" target="_blank" class="card__link">View on GitHub</a>
+                            <a href="https://github.com/AlvinSanchezO/TiendaVirtual" target="_blank" class="card__link">View on GitHub</a>
+                            <a href="https://AlvinSanchezO.github.io/TiendaVirtual/" target="_blank" class="card__link">Live Demo</a>
                         </div>
                     </div>
                 </article>
@@ -137,7 +137,7 @@
                     <div class="tech__item fade-in"><i class="devicon-express-original"></i><span>Express</span></div>
                     <div class="tech__item fade-in"><i class="devicon-mongodb-plain-wordmark"></i><span>MongoDB</span></div>
                     <div class="tech__item fade-in"><i class="devicon-microsoftsqlserver-plain"></i><span>SQL Server</span></div>
-                    <div class="tech__item fade-in"><i class="devicon-git-plain"></i><span>Git</span></div>
+                    <div classs="tech__item fade-in"><i class="devicon-git-plain"></i><span>Git</span></div>
                     <div class="tech__item fade-in"><i class="devicon-github-original"></i><span>GitHub</span></div>
                     <div class="tech__item fade-in"><i class="devicon-jira-plain"></i><span>Jira</span></div>
                     <div class="tech__item fade-in"><i class="devicon-html5-plain"></i><span>HTML5</span></div>
@@ -159,14 +159,14 @@
                         <svg class="contact__option-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                         <div class="contact__option-content">
                             <h3 class="contact__option-title">Email</h3>
-                            <a href="mailto:your.professional.email@com" class="contact__option-link">your.professional.email@com</a>
+                            <a href="mailto:tu.email@profesional.com" class="contact__option-link">tu.email@profesional.com</a>
                         </div>
                     </div>
                     <div class="contact__option fade-in">
                         <svg class="contact__option-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
                         <div class="contact__option-content">
                             <h3 class="contact__option-title">LinkedIn</h3>
-                            <a href="https://linkedin.com/in/your-username" target="_blank" class="contact__option-link">Send me a message</a>
+                            <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="contact__option-link">Send me a message</a>
                         </div>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
             <p>&copy; 2025 Alvin Cesar Sanchez Ochoa Alvarez. Designed and built by me.</p>
             <div class="footer__socials">
                 <a href="https://github.com/AlvinSanchezO" target="_blank" class="social__link">GitHub</a>
-                <a href="https://linkedin.com/in/your-username" target="_blank" class="social__link">LinkedIn</a>
+                <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="social__link">LinkedIn</a>
             </div>
         </div>
     </footer>
