feat: Add Task CRUD project card

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
             </div>
         </section>
 
-        <section classs="projects section" id="projects">
+        <section class="projects section" id="projects">
             <h2 class="section__title">Featured Projects</h2>
             <div class="projects__container container">
+                
                 <article class="card fade-in">
                     <div class="card__content">
                         <h3 class="card__title">Order Management API</h3>
@@ -124,6 +125,28 @@
                         </div>
                     </div>
                 </article>
+
+                <article class="card fade-in">
+                    <div class="card__content">
+                        <h3 class="card__title">Task CRUD App</h3>
+                        <p class="card__description">
+                           A task management application (CRUD) built with HTML, CSS, and plain JavaScript, allowing users to create, read, update, and delete tasks.
+                        </p>
+                         <p class="card__challenge">
+                            <strong>Technical Challenge:</strong> Using `localStorage` to save, update, and delete tasks, ensuring data persists after the browser is closed.
+                        </p>
+                        <ul class="card__tech-list">
+                            <li class="tech-item">HTML</li>
+                            <li class="tech-item">CSS</li>
+                            <li class="tech-item">JavaScript</li>
+                        </ul>
+                        <div class="card__links">
+                            <a href="https://github.com/AlvinSanchezO/crud-tareas-js" target="_blank" class="card__link">View on GitHub</a>
+                            <a href="https://alvinsanchezo.github.io/crud-tareas-js/" target="_blank" class="card__link">Live Demo</a>
+                        </div>
+                    </div>
+                </article>
+
             </div>
         </section>
         
@@ -137,7 +160,7 @@
                     <div class="tech__item fade-in"><i class="devicon-express-original"></i><span>Express</span></div>
                     <div class="tech__item fade-in"><i class="devicon-mongodb-plain-wordmark"></i><span>MongoDB</span></div>
                     <div class="tech__item fade-in"><i class="devicon-microsoftsqlserver-plain"></i><span>SQL Server</span></div>
-                    <div classs="tech__item fade-in"><i class="devicon-git-plain"></i><span>Git</span></div>
+                    <div class="tech__item fade-in"><i class="devicon-git-plain"></i><span>Git</span></div>
                     <div class="tech__item fade-in"><i class="devicon-github-original"></i><span>GitHub</span></div>
                     <div class="tech__item fade-in"><i class="devicon-jira-plain"></i><span>Jira</span></div>
                     <div class="tech__item fade-in"><i class="devicon-html5-plain"></i><span>HTML5</span></div>
