feat: Replace project 1 with To-Do List App

--- a/index.html
+++ b/index.html
@@ -85,22 +85,21 @@
                 
                 <article class="card fade-in">
                     <div class="card__content">
-                        <h3 class="card__title">Order Management API</h3>
+                        <h3 class="card__title">To-Do List App</h3>
                         <p class="card__description">
-                            A RESTful API built with C# and .NET to handle e-commerce logic, ensuring data integrity with SQL Server.
+                           A clean and simple app to manage daily tasks, built with HTML, CSS, and plain JavaScript.
                         </p>
-                        <p class="card__challenge">
-                            <strong>Technical Challenge:</strong> Implementing ACID transactions to ensure that order creation and inventory updates were an atomic operation.
+                         <p class="card__challenge">
+                            <strong>Technical Challenge:</strong> Persisting all task data (add, complete, delete) in the browser using `localStorage`.
                         </p>
                         <ul class="card__tech-list">
-                            <li class="tech-item">C#</li>
-                            <li class="tech-item">.NET</li>
-                            <li class="tech-item">SQL Server</li>
-                            <li class="tech-item">JWT</li>
+                            <li class="tech-item">HTML</li>
+                            <li class="tech-item">CSS</li>
+                            <li class="tech-item">JavaScript</li>
                         </ul>
                         <div class="card__links">
-                            <a href="https://github.com/AlvinSanchezO/tu-repo-proyecto-1" target="_blank" class="card__link">View on GitHub</a>
-                            <a href="#" target="_blank" class="card__link">View Docs (Swagger)</a>
+                            <a href="https://github.com/AlvinSanchezO/mi-todo-list" target="_blank" class="card__link">View on GitHub</a>
+                            <a href="https://alvinsanchezo.github.io/mi-todo-list/" target="_blank" class="card__link">Live Demo</a>
                         </div>
                     </div>
                 </article>
