fix: Update personal LinkedIn and email links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a href="assets/cv/Alvin_Sanchez_CV.pdf" download class="button">Download CV</a>
                     <div class="hero__socials">
                         <a href="https://github.com/AlvinSanchezO" target="_blank" class="social__link">GitHub</a>
-                        <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="social__link">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/alvinsanchez93/" target="_blank" class="social__link">LinkedIn</a>
                     </div>
                 </div>
             </div>
@@ -181,14 +181,14 @@
                         <svg class="contact__option-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                         <div class="contact__option-content">
                             <h3 class="contact__option-title">Email</h3>
-                            <a href="mailto:tu.email@profesional.com" class="contact__option-link">tu.email@profesional.com</a>
+                            <a href="mailto:alvinsanchezcontacto@gmil.com" class="contact__option-link">alvinsanchezcontacto@gmil.com</a>
                         </div>
                     </div>
                     <div class="contact__option fade-in">
                         <svg class="contact__option-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
                         <div class="contact__option-content">
                             <h3 class="contact__option-title">LinkedIn</h3>
-                            <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="contact__option-link">Send me a message</a>
+                            <a href="https://www.linkedin.com/in/alvinsanchez93/" target="_blank" class="contact__option-link">Send me a message</a>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
             <p>&copy; 2025 Alvin Cesar Sanchez Ochoa Alvarez. Designed and built by me.</p>
             <div class="footer__socials">
                 <a href="https://github.com/AlvinSanchezO" target="_blank" class="social__link">GitHub</a>
-                <a href="https://linkedin.com/in/tu-usuario" target="_blank" class="social__link">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/alvinsanchez93/" target="_blank" class="social__link">LinkedIn</a>
             </div>
         </div>
     </footer>
